HRDA - About - Fixes to university of nairobi

--- a/website/02-Education/hrda/01-about-part2.html
+++ b/website/02-Education/hrda/01-about-part2.html
@@ -35,7 +35,7 @@
             <li><a class="titolo_gc_africa" href="https://ucac-icy.net/" target="_blank">Université Catholique d’Afrique Centrale</a>, Cameroon</li>
             <li><a class="titolo_gc_africa" href="http://www.aau.edu.et/" target="_blank">Addis Ababa University</a>, Ethiopia</li>
             <li><a class="titolo_gc_africa" href="https://www.ug.edu.gh" target="_blank">University of Ghana</a>, Ghana</li>
-            <li><a class="titolo_gc_africa" href="https://www.ug.edu.gh" target="_blank">University of Nairobi</a>, Kenya</li>
+            <li><a class="titolo_gc_africa" href="http://www.uonbi.ac.ke/" target="_blank">University of Nairobi</a>, Kenya</li>
             <li><a class="titolo_gc_africa" href="http://www.uom.ac.mu" target="_blank">University of Mauritius</a>, Mauritius</li>
             <li><a class="titolo_gc_africa" href="http://www.uem.mz" target="_blank">Universidade Eduardo Mondlane</a>, Mozambique</li>
             <li><a class="titolo_gc_africa" href="https://unilag.edu.ng/" target="_blank">University of Lagos</a>, Nigeria</li>
