HRDA - Fixes to structures and content typos

--- a/website/02-Education/hrda/03-structure_and_content-part2.html
+++ b/website/02-Education/hrda/03-structure_and_content-part2.html
@@ -47,7 +47,7 @@
             <li>Communications to different African human rights bodies;</li>
             <li>Norm development at the African Union level in the form of general comments, guidelines and rules of procedures;</li>
             <li>Advocacy initiatives</li>
-            <li>Students also join study visits. They are divided into groups and undertake practical “human rights in the field” exercises to different destinations in and around South Africa.</li>
         </ul>
+        <p class="margin_bottom_20">Students also join study visits. They are divided into groups and undertake practical “human rights in the field” exercises to different destinations in and around South Africa.</p>
     </div>
 </div>
