HRDA - Admission Requirements - Fixes

--- a/website/02-Education/hrda/06-admission_requirements-part1.html
+++ b/website/02-Education/hrda/06-admission_requirements-part1.html
@@ -4,8 +4,8 @@
 	<li><strong>Law students</strong><br>
 		A degree allowing access to the legal profession (e.g. LLB or licence en droit)
 	</li>
-	<li><strong>Law students</strong><br>
-		A degree allowing access to the legal profession (e.g. LLB or licence en droit)
+	<li><strong>Other students (non-law students)</strong><br>
+		An Honours degree in a discipline relevant to human rights and democratisation
 	</li>
 </ul>
 
