HRDA - Media Toolkit - Video download link fix

--- a/website/02-Education/hrda/07-mediatoolkit-part1.html
+++ b/website/02-Education/hrda/07-mediatoolkit-part1.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20 "><a class="titolo_gc_europe" href="https://player.vimeo.com/play/1026190263?s=275064281_1602583901_79cdbefae53ebe831c195af5baaede65&loc=external&context=Vimeo%5CController%5CClipController.main&download=1" target="_blank">Video Download</a></p>
+            <p class="margin_bottom_20 "><a class="titolo_gc_europe" href="https://player.vimeo.com/play/1026190263?s=275064281_1602588152_ea1b9f54e922312b73309183adba9ba1&amp;loc=external&amp;context=Vimeo%5CController%5CClipController.main&amp;download=1" target="_blank">Video Download</a></p>
         </div>
     </div>
 </div>
@@ -37,9 +37,7 @@
         </div>
     </div>
 </div>
-
 {{file::eiuc/promo-hrda/img-posts.php}}
-
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
