About Us - Staff HQs - Comms Update

--- a/website/04-About-us/Staff/Headquarters/08-comms.html
+++ b/website/04-About-us/Staff/Headquarters/08-comms.html
@@ -46,6 +46,29 @@
             </div>
         </div>
     </div>
+        <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Alice_Deste_gchumanrights.jpg" alt="Alice D’Este - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Communication and PR Officer</p>
+            <p class="subtitle_page_programme margin_bottom_20">Alice D’Este</p>
+            <p class="margin_bottom_20">Alice started working at the Global Campus in 2020. She manages external communications, press work and public relations, as well as social media and digital PR in coordination with her team</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Alice is a professional journalist, member of the national Bar of Journalists since 2012. She has been a journalist with Corriere della Sera since 2008 and a press officer with responsibility for social media communication and copywriting for local institutions (IUSVE, Istituto Universitario Salesiano di Venezia e Verona; Avis, Italian association of blood donors)</p>
+                <p class="margin_bottom_20">Alice holds a Master’s Degree in Literature and an University Degree in teaching Italian language for foreigners. She has ten years of experience in journalism and media (Corriere della Sera; Il Fatto quotidiano, Gente Veneta; Nordesteuropa and others). Alice is also a public school teacher and collaborates with local institutions, like the Municipality of Venice, to teach Italian language courses to foreigners. Within this context she promotes the integration of her students, who are mainly asylum seekers or people coming from difficult backgrounds.</p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/alice-deste-72a7146a/" target="_blank">https://www.linkedin.com/in/alice-deste-72a7146a/o</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:pressoffice@gchumanrights.org">pressoffice@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:isotta.esposito@gchumanrights.org">isotta.esposito@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 929">+39 041 2720 929</a></p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Isotta_Esposito_global_campus_eiuc.jpg" alt="Isotta Esposito - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Communication and PR Officer</p>
