About Us - Staff HQs - Children Rights DPT addendum and fixes

--- a/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
+++ b/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
@@ -49,4 +49,28 @@
             </div>
         </div>
     </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Elisa_Klein_Diaz_gchumanrights.jpg" alt="Elisa Klein Díaz - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Global Study Programme Support Officer,</p>
+            <p class="subtitle_page_programme margin_bottom_20">Elisa Klein Díaz</p>
+            <p class="margin_bottom_20">Elisa contributes to the dissemination and follow-up initiation activities to the Global Study on Children Deprived of Liberty. </p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Elisa is currently working on the Global Study Toolkit on non-custodial measures as an alternative to migration-related detention and is responsible for the Global Study Newsletter. She further supports the creation of a new website for the Global Study and has also worked as editor on the Executive Summary of the Global Study on Children Deprived of Liberty. </p>
+                <p class="margin_bottom_20">Before joining the Global Campus of Human Rights in 2020, Elisa worked in the Press and Communications Department of the Austrian Ombudsman Board and before that as consultant at the Ludwig Boltzmann Institute for Human Rights. Currently she also works at FIAN Austria as Social Rights Project Manager.</p>
+                <p class="margin_bottom_20">Elisa holds a Bachelor´s Degree in International Relations and a Master of Arts in Human Rights. Her main areas of interest are children´s rights, migration, education and social rights. </p>
+               <!--  <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/manu-krishan-30967453/" target="_blank">https://www.linkedin.com/in/manukrishan</a></p> -->
+                <p>Email: <a class="titolo_gc_europe" href="mailto:elisa.klein-diaz@gchumanrights.org">elisa.klein-diaz@gchumanrights.org</a></p>
+                <!--<p>Phone: <a class="titolo_gc_europe" href="tel:+390412720952">+39 041 2720 952</a></p>-->
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
