CRP - minor fixes to European Projects and Initial Commit South East Projects

--- a/website/03-Research/Projects/children-rights/accordions-rlf-europe.html
+++ b/website/03-Research/Projects/children-rights/accordions-rlf-europe.html
@@ -39,6 +39,7 @@
                     <p class="title_accordion titolo_gc_europe">Enacting the Recommendations of the UN Global Study in the National Agenda and in the European Context</p>
                 </div>
                 <div class="text_accordion_nested">
+                    <p>[nbsp]</p>
                     <p class="margin_bottom_20">The project aims to support Ombudspersons for Children in implementing the recommendations of the <em>UN Global Study on Children Deprived of Liberty</em> (GSCDL) within particular national and European multi-level governance.</p>
                     <p class="margin_bottom_10">This function will be piloted in the Italian context, which will open the possibility for future interventions in other European countries. Two workshops will be organised at the Headquarters of the Global Campus of Human Rights in Venice:</p>
                     <ul class="lista_con_pallini margin_bottom_20">
@@ -59,6 +60,7 @@
                     <p class="title_accordion titolo_gc_europe">MOOC on Children’s Right and Technology in the Digital Age</p>
                 </div>
                 <div class="text_accordion_nested">
+                    <p>[nbsp]</p>
                     <p class="margin_bottom_20">This will be the first-ever Massive Open Online Course (MOOC) on children’s rights and technology in the digital age. It aims to educate parents, teachers, policy makers, and technologists alike using a rights-based approach to understanding how this topic is materialising within different contexts around the globe. Many users, including parents and children, place blind-trust, to varying degrees, in the promises of futuristic technologies, yet the positives and negatives of these rapidly evolving devices and algorithms have yet to be fully understood.</p>
                     <p class="margin_bottom_20">The key stakeholders in developing these technologies may not always have a child’s best interest in mind, which is why everyday citizens, politicians, human-centric tech-advocates, and civil society need to proactively work towards creating a safe and healthy environment for children to learn and grow.</p>
                     <p class="margin_bottom_20">This Children’s Rights and Technology in the Digital Age MOOC aims to close the information gap between experts and users, incubate productive public debate, and inspire action towards children’s rights advocacy. Our course modules will discuss the following topics as related to children and technology: overarching legal/policy frameworks; data protection and privacy; early childhood development and the right to play; the right to education; the right to health.</p>
@@ -75,6 +77,7 @@
                     <p class="title_accordion titolo_gc_europe">Personal Liberty of Children in Austria Revisited</p>
                 </div>
                 <div class="text_accordion_nested">
+                    <p>[nbsp]</p>
                     <p class="margin_bottom_10">The UN Global Study of Children Deprived of Liberty has highlighted the dire situation of more than 7.2 million children worldwide and stressed the need for replacement strategies and alternatives to detention of children. The project aims to create a process for structured implementation of the Study’s recommendations in Austria. For this purpose, it will conduct a comprehensive analysis of the status quo, followed by a targeted intervention programme relevant for three main settings of deprivation of liberty of children, namely in the context of:</p>
                     <ul class="lista_con_pallini margin_bottom_20">
                         <li>criminal/juvenile justice</li>
