--- a/website/03-Research/Projects/children-rights/accordions-rlf-southeast_europe.html
+++ b/website/03-Research/Projects/children-rights/accordions-rlf-southeast_europe.html
@@ -9,13 +9,13 @@
             </div>
         </div>
         <div class="list_accordion">
-            <div class="accordion margin_bottom_20 accordion_gc_europe">
+            <div class="accordion margin_bottom_20 accordion_gc_south_east_europe">
                 <div class="icon_e_title_accordion_nested">
                     <div class="piu_accordion_nested">
                         <div class="verticale">[nbsp][nbsp][nbsp]</div>
                         <div class="orizzontale">[nbsp][nbsp][nbsp]</div>
                     </div>
-                    <p class="title_accordion titolo_gc_europe">Children in Migration in Southeast Europe (SEE)</p>
+                    <p class="title_accordion titolo_gc_south_east_europe">Children in Migration in Southeast Europe (SEE)</p>
                 </div>
                 <div class="text_accordion_nested">
                     <p>[nbsp]</p>
@@ -28,7 +28,7 @@
                     </ul>
                     <p class="margin_bottom_20">For updates, please follow the GCSEE/ERMA pages (<a href="http://cis.unsa.ba/en/" class="titolo_gc_south_east_europe">CIS website</a>, <a href="https://www.facebook.com/ermaprogramme/" class="titolo_gc_south_east_europe">Facebook</a>, <a href="http://linkedin.com/company/global-campus-south-east-europe-gcsee-erma" class="titolo_gc_south_east_europe">Linkedin</a>, <a href="https://www.instagram.com/erma_gcsee/" class="titolo_gc_south_east_europe">Instagram</a>).</p>
                     <p><strong>Project Contact</strong>: Nikolina Milić, University of Sarajevo</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:nikolina.milic@gchumanrights.org" class="titolo_gc_europe">nikolina.milic@gchumanrights.org</a>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:nikolina.milic@gchumanrights.org" class="titolo_gc_south_east_europe">nikolina.milic@gchumanrights.org</a>
                 </div>
             </div>
         </div>
@@ -66,9 +66,9 @@ $(function() {
 
 }
 
-.accordion_gc_europe .verticale,
-.accordion_gc_europe .orizzontale {
-    background-color: #009fe3 !important;
+.accordion_gc_south_east_europe .verticale,
+.accordion_gc_south_east_europe .orizzontale {
+    background-color: #69c8f3 !important;
 }
 
 .table_accordion_cell .piu_accordion_nested {
