CRP - SSE final retouches for accordions

--- a/website/03-Research/Projects/children-rights/accordions-rlf-southeast_europe.html
+++ b/website/03-Research/Projects/children-rights/accordions-rlf-southeast_europe.html
@@ -10,7 +10,7 @@
         </div>
         <div class="list_accordion">
             <div class="accordion margin_bottom_20 accordion_gc_south_east_europe">
-                <div class="icon_e_title_accordion_nested">
+                <div class="icon_e_title_accordion_nested_sse">
                     <div class="piu_accordion_nested">
                         <div class="verticale">[nbsp][nbsp][nbsp]</div>
                         <div class="orizzontale">[nbsp][nbsp][nbsp]</div>
@@ -28,7 +28,7 @@
                     </ul>
                     <p class="margin_bottom_20">For updates, please follow the GCSEE/ERMA pages (<a href="http://cis.unsa.ba/en/" class="titolo_gc_south_east_europe">CIS website</a>, <a href="https://www.facebook.com/ermaprogramme/" class="titolo_gc_south_east_europe">Facebook</a>, <a href="http://linkedin.com/company/global-campus-south-east-europe-gcsee-erma" class="titolo_gc_south_east_europe">Linkedin</a>, <a href="https://www.instagram.com/erma_gcsee/" class="titolo_gc_south_east_europe">Instagram</a>).</p>
                     <p><strong>Project Contact</strong>: Nikolina Milić, University of Sarajevo</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:nikolina.milic@gchumanrights.org" class="titolo_gc_south_east_europe">nikolina.milic@gchumanrights.org</a>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:nikolina.milic@gchumanrights.org" class="titolo_gc_europe">nikolina.milic@gchumanrights.org</a>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
 </div>
 <script>
 $(function() {
-    $(".icon_e_title_accordion_nested").on("click", function() {
+    $(".icon_e_title_accordion_nested_sse").on("click", function() {
         $(this).find(".verticale").toggleClass('rotated');
 
         $(this).toggleClass('open_accordion');
@@ -59,7 +59,7 @@ $(function() {
     display: none;
 }
 
-.icon_e_title_accordion_nested {
+.icon_e_title_accordion_nested_sse {
     display: flex;
     align-items: center;
     cursor: pointer;
