CRP - Africa initial draft

--- a/website/03-Research/Projects/children-rights/accordions-rlf-africa.html
+++ b/website/03-Research/Projects/children-rights/accordions-rlf-africa.html
@@ -2,7 +2,7 @@
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
             <p class="title_accordion titolo_gc_africa">Africa (HRDA)</p>
-            <p class="number_universities">1 Project</p>
+            <p class="number_universities">2 Projects</p>
             <div class="piu_accordion">
                 <div class="verticale">[nbsp]</div>
                 <div class="orizzontale">[nbsp]</div>
@@ -15,20 +15,41 @@
                         <div class="verticale">[nbsp][nbsp][nbsp]</div>
                         <div class="orizzontale">[nbsp][nbsp][nbsp]</div>
                     </div>
-                    <p class="title_accordion titolo_gc_africa">Children in Migration in Southeast Europe (SEE)</p>
+                    <p class="title_accordion titolo_gc_africa">Child Participation in the Implementation of Global and Regional Development Frameworks in Africa</p>
                 </div>
                 <div class="text_accordion_nested">
                     <p>[nbsp]</p>
-                    <p class="margin_bottom_10">This two-year project aims to strengthen education, research, training, network-building and advocacy for the rights of migrant and refugee children in South East Europe by producing high-quality research on the topic and disseminating knowledge among students, academia, relevant stakeholders, and the wider public. Under this project, the GCSEE team will: </p>
+                    <p class="margin_bottom_20">This is a three-year project at the intersection of three key areas: child participation rights, the global and regional development agenda as set out in the Sustainable Development Goals (SDGs), and African regional development frameworks (ARDFs), particularly the African Union Agenda 2063 and the African Union Agenda 2040 for Children.</p>
+                    <p class="margin_bottom_10">The overall project goal is to promote (and increase public awareness on the importance of) child participation in national, regional and international development processes in Africa. This goal will be achieved through three main interventions:</p>
                     <ul class="lista_con_pallini margin_bottom_20">
-                        <li>mainstream children’s rights within the GCSEE/ERMA curricular and extracurricular activities</li>
-                        <li>encourage its network of professors, students and alumni to produce quality research outputs that will be published in the edited volume <em>Children in migration: Perspectives from South East Europe</em></li>
-                        <li>build a strong research network of young professionals working to improve the rights of migrant and refugee children in South East Europe</li>
-                        <li>deliver training courses and workshops on children’s rights to build capacities of local stakeholders engaged in the protection of unaccompanied and separated migrant and refugee children in Bosnia and Herzegovina</li>
+                        <li>research for evidence and knowledge on the standards and practice on child participation in development governance</li>
+                        <li>evidence-based advocacy for child participation in development governance</li>
+                        <li>and capacity building to enhance the implementation of child participation in the framework</li>
                     </ul>
-                    <p class="margin_bottom_20">For updates, please follow the GCSEE/ERMA pages (<a href="http://cis.unsa.ba/en/" class="titolo_gc_africa">CIS website</a>, <a href="https://www.facebook.com/ermaprogramme/" class="titolo_gc_africa">Facebook</a>, <a href="http://linkedin.com/company/global-campus-south-east-europe-gcsee-erma" class="titolo_gc_africa">Linkedin</a>, <a href="https://www.instagram.com/erma_gcsee/" class="titolo_gc_africa">Instagram</a>).</p>
-                    <p><strong>Project Contact</strong>: Nikolina Milić, University of Sarajevo</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:nikolina.milic@gchumanrights.org" class="titolo_gc_africa">nikolina.milic@gchumanrights.org</a>
+                    <p class="margin_bottom_20">Specifically, the project will include a regional study on child participation in development frameworks in Africa; capacity building for key stakeholders; regular engagement with stakeholders on the need and means of child participation; generating contextually relevant tools for implementation; monitoring of child participation in development governance; and facilitating dialogue on the manner and means of ensuring child participation in governance. </p>
+                    <p><strong>Project Contact</strong>: Admark Moyo, University of Pretoria</p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:admark.moyo@up.ac.za" class="titolo_gc_africa">admark.moyo@up.ac.za</a></p>
+                </div>
+            </div>
+            <div class="accordion margin_bottom_20 accordion_gc_africa">
+                <div class="icon_e_title_accordion_nested_africa">
+                    <div class="piu_accordion_nested">
+                        <div class="verticale">[nbsp][nbsp][nbsp]</div>
+                        <div class="orizzontale">[nbsp][nbsp][nbsp]</div>
+                    </div>
+                    <p class="title_accordion titolo_gc_africa">Creating an Independent Oversight Mechanism to reinforce the Rights of Children in Secure Care Centres in South Africa </p>
+                </div>
+                <div class="text_accordion_nested">
+                    <p>[nbsp]</p>
+                    <p class="margin_bottom_20">The proposed project is a national follow-up to the Global Study on Children Deprived of Liberty based at the University of Pretoria. in June 2018 South Africa presented the numbers of children in detention in its response to the Global Study questionnaire. Among the numbers provided was the number of children in Secure Care Centres. This was significant because it was the first time that the number was captured in a manner that was comparable to other statistics, such as the number of children in prison. </p>
+                    <p class="margin_bottom_10">The project’s main objective is to create a mechanism for independent oversight to reinforce the rights of children in secure care in South Africa. This includes the following sub-objectives:</p>
+                    <ul class="lista_con_pallini margin_bottom_20">
+                        <li>undertake a base-line study of the current secure care centres, through visits to the secure care centres and interviews with children and with staff, to inform the independent oversight mechanism;</li>
+                        <li>develop a model of an independent oversight mechanism to reinforce the right of children in secure care; </li>
+                        <li>develop a plan for the management and care of children in secure care in situations of disaster/emergency, to be built into the oversight mechanism.</li>
+                    </ul>
+                    <p class="margin_bottom_20">Specifically, the project will include a regional study on child participation in development frameworks in Africa; capacity building for key stakeholders; regular engagement with stakeholders on the need and means of child participation; generating contextually relevant tools for implementation; monitoring of child participation in development governance; and facilitating dialogue on the manner and means of ensuring child participation in governance. </p>
+                    <p class="margin_bottom_20"><strong>Project Contacts</strong>: Karabo Ozah, University of Pretoria, <a href="mailto:karabo.ozah@up.ac.za" class="titolo_gc_africa">karabo.ozah@up.ac.za</a>; Ann Skelton, University of Pretoria <a href="mailto:ann.skelton@up.ac.za" class="titolo_gc_africa">ann.skelton@up.ac.za</a></p>
                 </div>
             </div>
         </div>
