MOOC LGBTI - Menuspalla minor fix

--- a/website/02-Education/moocs/lgbti/00-menuspalla.html
+++ b/website/02-Education/moocs/lgbti/00-menuspalla.html
@@ -10,7 +10,7 @@
         <!-- <div class="blocco_sconto">
             <p class="name_quote">Free enrolment until 16 February 2020!</p>
         </div> -->
-        <p><a href="#newsletter" class="newsletter"> <button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Stay tuned for new editions</button> </a>
+        <p><a href="#newsletter" class="newsletter"> <button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Stay tuned for new editions</button> </a></p>
     </div>
 </aside>
 <section class="container no_margin_bottom">
