MOOC MSHR - Menuspalla minor updates

--- a/website/02-Education/moocs/mshr/00-menuspalla.html
+++ b/website/02-Education/moocs/mshr/00-menuspalla.html
@@ -10,7 +10,7 @@
         <!-- <div class="blocco_sconto">
             <p class="name_quote">Free enrolment until<br>31 May 2020</p>
         </div> -->
-        <p><a href="//edx.gchumanrights.org/mshr" target="_blank"><button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Enrol</button></a></p>
+        <p><a href="#newsletter" class="newsletter"> <button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Stay tuned for new editions</button> </a></p>
     </div>
 </aside>
 <section class="container no_margin_bottom">
@@ -24,7 +24,7 @@
                 <p class="name_quote">Free enrolment until<br>31 May 2020</p>
             </div> -->
         </div>
-        <p><a href="https://edx.gchumanrights.org/mshr" target="_blank"><button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Enrol</button></a></p>
+        <p><a href="#newsletter" class="newsletter"> <button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Stay tuned for new editions</button> </a></p>
     </div>
     <div class="ce_text block">
         <div class="title_page_programme_e_logo">
